--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@ setTimeout(() => {
                       </tima>
                       <div class="olclick">
                         <div class="olclick_icon" id="btnShowWindow"><sw>1</sw><img src="مشروع جديد (2).png" alt=""><a>Canyn iocn</a></div>
+                        <div class="olclick_icon" id=""><img style="background: white;" src="https://img.icons8.com/ios11/512/228BE6/settings.png" alt=""><a>Settings</a></div>
                       </div>
                       <!-- ----- -->
                       <div class="sswe" id="windowContainer">
